--- a/mission-2022-main/style.css
+++ b/mission-2022-main/style.css
@@ -7,7 +7,7 @@ font-family: 'Josefin Sans', sans-serif;
 font-family: 'Luxurious Roman', cursive;
 font-family: 'Merriweather', serif;
 font-family: 'Poppins', sans-serif;
-margin: 0;
+margin: ;
 }
 h1{
     font-size: 50px;
@@ -33,4 +33,38 @@ section{
 .back-shape{
     background-image: url(images/shapes/shape-7.png);
     background-repeat: no-repeat;
+}
+h3{
+    color: wheat;
+}
+
+.section img{
+    width: 20%;
+    display: flex;
+    padding-left: 10%;
+    text-align: center;
+}
+.bcd{
+    background-color: burlywood;
+    border: gray solid;
+    border-radius: 10px;
+    padding-left: 10px;
+    padding-right: 10%;
+    box-shadow:grey 10px 10px 10px ;
+}
+.dvd{
+    background-color: lightblue;
+    border:grey solid;
+    border-radius: 10px;
+    box-shadow:gray 10px 10px 10px;
+    padding-left: 10px;
+    padding-right: 10%;
+}
+.xyz{
+    background-color: lightseagreen;
+    border: gray solid;
+    border-radius: 10px;
+    padding-left: 10px;
+    padding-right: 10%;
+    box-shadow:grey 10px 10px 10px ;
 }
