fourth part added

--- a/mission-2022-main/style.css
+++ b/mission-2022-main/style.css
@@ -83,9 +83,33 @@ h3{
 }
 #second-part img{
     width: 50%;
-    margin: 10%;
-    padding: 10px;
+    margin: 10px;
+    padding: 5px;
+
 }
 #border{
     border-left: rgb(212, 10, 179) solid 5px;
 }
+.section{
+    padding-top: 10px;
+    padding-bottom: 10%;
+}
+.dis-flex img{
+    width: 80%;
+    padding-left: 40%;
+    
+
+}
+.dis-flex{
+    display: flex;
+
+}
+.nadim{
+    padding-right: 20%;
+    padding-left: 10%;
+}
+.back-ground{
+    background-image: url(images/shapes/shape-6.png);
+    background-repeat: no-repeat;
+}
+
