--- a/mission-2022-main/style.css
+++ b/mission-2022-main/style.css
@@ -147,7 +147,18 @@ h3{
     background-position: right;
     border-radius: 20%;
     padding-top: 5%;
-    padding-bottom: 2%;
-    
-    
+    padding-bottom: 5%;
+}
+#footerr{
+    text-align: center;
+    color: white;
+    background-color: black;
+}
+#footer{
+    text-align: center;
+    color: darkgray;
+    background-color: black;
+}
+.foooter{
+    background-color: black;
 }
